--- a/index.html
+++ b/index.html
@@ -11,27 +11,26 @@
 
     <title>Stipter Admin</title>
 
-    <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-    <!-- END GLOBAL MANDATORY STYLES -->
-    <!-- BEGIN THEME STYLES -->
+
     <link href="app/assets/theme/global/css/components.css" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/global/css/plugins.css" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/admin/layout/css/layout.css" rel="stylesheet" type="text/css" />
     <link id="style_color" href="app/assets/theme/admin/layout/css/themes/default.css" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/admin/layout/css/custom.css" rel="stylesheet" type="text/css" />
-    <!-- END THEME STYLES -->
 
     <link href="app/css/main.css" rel="stylesheet">
     <link href="app/css/button.css" rel="stylesheet">
 
-	<script src="bower_components/headjs/dist/1.0.0/head.min.js" data-headjs-load="app/scripts/init.js"></script>
-
+    <!--[if lt IE 9]>
+	<script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+	<script src="bower_components/respond/dest/respond.min.js"></script>
+	<![endif]-->
 </head>
 
 <body>
@@ -48,5 +47,56 @@
             </div>
         </div>
     </div>
+
+    <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
+    <script src="bower_components/angular-translate-loader-url/angular-translate-loader-url.js"></script>
+    <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="bower_components/respond/dest/respond.src.js"></script>
+    <!-- endbower -->
+
+    <!-- i18n -->
+    <!-- nl -->
+    <script src="https://code.angularjs.org/1.0.3/i18n/angular-locale_nl-nl.js"></script>
+
+    <!-- Metronic components -->
+    <script src="app/assets/theme/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
+    <script src="app/assets/theme/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+    <script src="app/assets/theme/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+    <script src="app/assets/theme/global/plugins/jquery.cokie.min.js" type="text/javascript"></script>
+    <script src="app/assets/theme/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
+    <script src="app/assets/theme/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+    <script src="app/assets/theme/global/plugins/jquery.pulsate.min.js" type="text/javascript"></script>
+    <script src="app/assets/theme/global/plugins/jquery-bootpag/jquery.bootpag.min.js" type="text/javascript"></script>
+    <script src="app/assets/theme/global/plugins/holder.js" type="text/javascript"></script>
+    <!-- end Metronic components -->
+
+    <!-- Metronic -->
+    <script src="app/assets/theme/global/scripts/metronic.js" type="text/javascript"></script>
+    <script src="app/assets/theme/admin/layout/scripts/layout.js" type="text/javascript"></script>
+    <script src="app/assets/theme/admin/layout/scripts/quick-sidebar.js" type="text/javascript"></script>
+    <script src="app/assets/theme/admin/pages/scripts/ui-general.js" type="text/javascript"></script>
+    <script src="app/scripts/init.js"></script>
+    <!-- end Metronic -->
+
+    <!-- AngularJS app files -->
+
+    <!-- ADMIN -->
+    <script src="app/modules/admin/app.js"></script>
+    <script src="app/modules/admin/home/controllers/controllers.home.js"></script>
+
+    <!-- end AngularJS app files -->
 </body>
+
 </html>
