Angular new style applied and init directive.

--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -1,5 +1,6 @@
 <div id="sidebar">
     <ul class="sidebar-menu" ng-controller="MenuCtrl">
-        <li><a href="#" ng-class="getPath('/home')"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
+        <li><a href="#/home" ng-class="getPath('/home')"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
+        <li><a href="#/widgets" ng-class="getPath('/widgets')"><span class="glyphicon glyphicon-dashboard"></span>  Widgets</a></li>
     </ul>
 </div>
