--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="adminApp">
+<html data-ng-app="app">
 
 <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="app/assets/theme/ico/favicon.ico">
 
-    <title>Stipter Admin</title>
+    <title>Bajsapp</title>
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -58,6 +58,8 @@
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
@@ -92,9 +94,19 @@
 
     <!-- AngularJS app files -->
 
+    <!-- blocks -->
+    <script src="app/modules/app.js"></script>
+    <script src="app/modules/core/core.module.js"></script>
+    <script src="app/modules/core/common.js"></script>
+    <script src="app/modules/core/routes.js"></script>
+
     <!-- ADMIN -->
-    <script src="app/modules/admin/app.js"></script>
-    <script src="app/modules/admin/home/controllers/controllers.home.js"></script>
+
+    <script src="app/modules/home/home.js"></script>
+
+    <script src="app/modules/widgets/widgets.module.js"></script>
+    <script src="app/modules/widgets/widgets.js"></script>
+    <script src="app/modules/widgets/calendar/calendar.js"></script>
 
     <!-- end AngularJS app files -->
 </body>
