Small myAge directive example.

--- a/app/modules/widgets/widgets.tpl.html
+++ b/app/modules/widgets/widgets.tpl.html
@@ -4,7 +4,9 @@
         Widgets
     </h3>
 
-    <wi-calendar min="10"></wi-calendar>
+    <!--<wi-calendar min="10"></wi-calendar>-->
+
+    <wi-my-age></wi-my-age>
 
 
 </div>
