--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <script src="bower_components/angular-translate-loader-url/angular-translate-loader-url.js"></script>
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
     <script src="bower_components/respond/dest/respond.src.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <!-- endbower -->
 
     <!-- i18n -->
@@ -107,6 +109,7 @@
     <script src="app/modules/widgets/widgets.module.js"></script>
     <script src="app/modules/widgets/widgets.js"></script>
     <script src="app/modules/widgets/calendar/calendar.js"></script>
+    <script src="app/modules/widgets/myAge/myAge.js"></script>
 
     <!-- end AngularJS app files -->
 </body>
