--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -2,5 +2,6 @@
     <ul class="sidebar-menu" ng-controller="MenuCtrl">
         <li><a href="#/home" ng-class="getPath('/home')"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
         <li><a href="#/widgets" ng-class="getPath('/widgets')"><span class="glyphicon glyphicon-dashboard"></span>  Widgets</a></li>
+        <li><a href="#/promises" ng-class="getPath('/promises')"><span class="glyphicon glyphicon-asterisk"></span>  Promises</a></li>
     </ul>
 </div>
