--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
     <script src="app/modules/widgets/calendar/calendar.js"></script>
     <script src="app/modules/widgets/myAge/myAge.js"></script>
 
+    <script src="app/modules/promises/promises.module.js"></script>
+    <script src="app/modules/promises/promises.js"></script>
+
     <!-- end AngularJS app files -->
 </body>
 
