--- a/app/modules/promises/promises.tpl.html
+++ b/app/modules/promises/promises.tpl.html
@@ -4,7 +4,8 @@
         Promises
     </h3>
 
-    <pre>{{vm.data | json}}</pre>
-    <pre>{{vm.timeoutPromiseData | json}}</pre>
+    <pre>{{vm.timeoutDataData | json}}</pre>
+    <pre>httpData: {{vm.httpData | json}}</pre>
+    <pre>callbackData: {{vm.callbackData | json}}</pre>
 
 </div>
