Update AngularJS to v1.3.8 and added patterns module.

--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -3,5 +3,6 @@
         <li><a href="#/home" ng-class="getPath('/home')"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
         <li><a href="#/widgets" ng-class="getPath('/widgets')"><span class="glyphicon glyphicon-dashboard"></span>  Widgets</a></li>
         <li><a href="#/promises" ng-class="getPath('/promises')"><span class="glyphicon glyphicon-asterisk"></span>  Promises</a></li>
+        <li><a href="#/patterns" ng-class="getPath('/patterns')"><span class="glyphicon glyphicon-barcode"></span>  Patterns</a></li>
     </ul>
 </div>
