--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
     <script src="app/modules/promises/promises.module.js"></script>
     <script src="app/modules/promises/promises.js"></script>
 
+    <script src="app/modules/patterns/patterns.module.js"></script>
+    <script src="app/modules/patterns/patterns.js"></script>
+
     <!-- end AngularJS app files -->
 </body>
 
