--- a/app/modules/patterns/patterns.tpl.html
+++ b/app/modules/patterns/patterns.tpl.html
@@ -5,19 +5,24 @@
     </h3>
 
     <h4>Constructor Invocation</h4>
+
     <div class="alert alert-info">
         <ul>
-            <li><b>ID:</b> {{ vm.constructorInvocation.id }}</li>
-            <li><b>NAME:</b> {{ vm.constructorInvocation.name }}</li>
+            <li>
+                <b>{{ vm.constructorInvocation.id }}</b>
+                <p>{{ vm.constructorInvocation.name }}</p>
+            </li>
         </ul>
     </div>
-    <hr />
+    <hr/>
 
     <h4>Observer</h4>
+
     <div class="alert alert-info">
         <ul>
             <li ng-repeat="item in vm.observer">
                 <b>{{ item.id}}</b>
+
                 <p>{{ item.text }}</p>
             </li>
         </ul>
