--- a/app/modules/patterns/patterns.tpl.html
+++ b/app/modules/patterns/patterns.tpl.html
@@ -27,5 +27,12 @@
             </li>
         </ul>
     </div>
+    <hr />
+
+    <h4>Module</h4>
+
+    <div class="alert alert-info">
+        {{ vm.module }}
+    </div>
 
 </div>
