OcLazyLoad module files.

--- a/index.html
+++ b/index.html
@@ -100,25 +100,34 @@
 
     <!-- blocks -->
     <script src="app/modules/app.js"></script>
-    <script src="app/modules/core/routes.js"></script>
+    <script src="app/modules/core/config.js"></script>
+    <script src="app/modules/menu/menu.js"></script>
+
+    <script src="app/modules/home/config.js"></script>
+    <script src="app/modules/widgets/config.js"></script>
+    <script src="app/modules/promises/config.js"></script>
+    <script src="app/modules/patterns/config.js"></script>
+
+
+
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
 
     <!-- ADMIN -->
 
-    <script src="app/modules/home/home.module.js"></script>
-    <script src="app/modules/home/home.js"></script>
+    <!--<script src="app/modules/home/home.module.js"></script>-->
+    <!--<script src="app/modules/home/home.js"></script>-->
 
-    <script src="app/modules/widgets/widgets.module.js"></script>
-    <script src="app/modules/widgets/widgets.js"></script>
-    <script src="app/modules/widgets/calendar/calendar.js"></script>
-    <script src="app/modules/widgets/myAge/myAge.js"></script>
+    <!--<script src="app/modules/widgets/widgets.module.js"></script>-->
+    <!--<script src="app/modules/widgets/widgets.js"></script>-->
+    <!--<script src="app/modules/widgets/calendar/calendar.js"></script>-->
+    <!--<script src="app/modules/widgets/myAge/myAge.js"></script>-->
 
-    <script src="app/modules/promises/promises.module.js"></script>
-    <script src="app/modules/promises/promises.js"></script>
+    <!--<script src="app/modules/promises/promises.module.js"></script>-->
+    <!--<script src="app/modules/promises/promises.js"></script>-->
 
-    <script src="app/modules/patterns/patterns.module.js"></script>
-    <script src="app/modules/patterns/patterns.js"></script>
+    <!--<script src="app/modules/patterns/patterns.module.js"></script>-->
+    <!--<script src="app/modules/patterns/patterns.js"></script>-->
 
     <!-- end AngularJS app files -->
 </body>
