--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <div id="main">
         <div id="header">
-            <span class="logo"><span class="glyphicon glyphicon-user"></span> Admin</span>
+            <span class="logo"><span class="glyphicon glyphicon-road"></span> BajsAPP</span>
         </div>
 
         <div ng-include="'app/tpl/sidebar.tpl.html'"></div>
@@ -107,27 +107,10 @@
     <script src="app/modules/widgets/config.js"></script>
     <script src="app/modules/promises/config.js"></script>
     <script src="app/modules/patterns/config.js"></script>
-
-
+    <script src="app/modules/animations/config.js"></script>
 
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
-
-    <!-- ADMIN -->
-
-    <!--<script src="app/modules/home/home.module.js"></script>-->
-    <!--<script src="app/modules/home/home.js"></script>-->
-
-    <!--<script src="app/modules/widgets/widgets.module.js"></script>-->
-    <!--<script src="app/modules/widgets/widgets.js"></script>-->
-    <!--<script src="app/modules/widgets/calendar/calendar.js"></script>-->
-    <!--<script src="app/modules/widgets/myAge/myAge.js"></script>-->
-
-    <!--<script src="app/modules/promises/promises.module.js"></script>-->
-    <!--<script src="app/modules/promises/promises.js"></script>-->
-
-    <!--<script src="app/modules/patterns/patterns.module.js"></script>-->
-    <!--<script src="app/modules/patterns/patterns.js"></script>-->
 
     <!-- end AngularJS app files -->
 </body>
