--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -4,5 +4,6 @@
         <li><a ui-sref="widgets" ng-class="vm.getPath('/widgets')"><span class="glyphicon glyphicon-dashboard"></span>  Widgets</a></li>
         <li><a ui-sref="promises" ng-class="vm.getPath('/promises')"><span class="glyphicon glyphicon-asterisk"></span>  Promises</a></li>
         <li><a ui-sref="patterns" ng-class="vm.getPath('/patterns')"><span class="glyphicon glyphicon-barcode"></span>  Patterns</a></li>
+	    <li><a ui-sref="animations" ng-class="vm.getPath('/animations')"><span class="glyphicon glyphicon-briefcase"></span>  Animations</a></li>
     </ul>
 </div>
