New module with bad tests (RED).

--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -5,5 +5,6 @@
         <li><a ui-sref="promises" ng-class="vm.getPath('/promises')"><span class="glyphicon glyphicon-asterisk"></span>  Promises</a></li>
         <li><a ui-sref="patterns" ng-class="vm.getPath('/patterns')"><span class="glyphicon glyphicon-barcode"></span>  Patterns</a></li>
 	    <li><a ui-sref="animations" ng-class="vm.getPath('/animations')"><span class="glyphicon glyphicon-briefcase"></span>  Animations</a></li>
+	    <li><a ui-sref="seatReservation" ng-class="vm.getPath('/seatReservation')"><span class="glyphicon glyphicon-adjust"></span>  Seat reservation</a></li>
     </ul>
 </div>
