--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <script src="app/modules/promises/config.js"></script>
     <script src="app/modules/patterns/config.js"></script>
     <script src="app/modules/animations/config.js"></script>
+    <script src="app/modules/seatReservation/config.js"></script>
 
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
