New module with bad tests (GREEN).

--- a/app/modules/seatReservation/seatReservation.tpl.html
+++ b/app/modules/seatReservation/seatReservation.tpl.html
@@ -3,6 +3,8 @@
 
 	<p>Screen this way! :)</p>
 
+	<pre>{{cols|json}}</pre>
+
 	<table class="seatLayout">
 		<tr>
 			<td class="padding-bottom"></td>
