New module with bad tests (GREEN).

--- a/app/modules/seatReservation/seatReservation.tpl.html
+++ b/app/modules/seatReservation/seatReservation.tpl.html
@@ -1,10 +1,5 @@
 <div class="content">
-	<h2 class="title">Seat Reservation System using AngularJS</h2>
-
-	<p>Screen this way! :)</p>
-
-	<pre>{{cols|json}}</pre>
-
+	<h2 class="title">Seat Reservation System</h2>
 	<table class="seatLayout">
 		<tr>
 			<td class="padding-bottom"></td>
@@ -28,6 +23,6 @@
 
 	<div class="buttons">
 		<button ng-click="clearSelected()">Clear</button>
-		<button ng-click="showSelected()">Show selected seats!</button>
+		<button ng-click="register()">Register</button>
 	</div>
 </div>
