--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="app/assets/theme/global/css/plugins.css" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/admin/layout/css/layout.css" rel="stylesheet" type="text/css" />
     <link id="style_color" href="app/assets/theme/admin/layout/css/themes/default.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css" />
     <link href="app/assets/theme/admin/layout/css/custom.css" rel="stylesheet" type="text/css" />
 
     <link href="app/css/main.css" rel="stylesheet">
@@ -65,10 +66,10 @@
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
     <script src="bower_components/respond/dest/respond.src.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/angular-toastr/dist/angular-toastr.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-moment/angular-moment.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
     <!-- endbower -->
 
@@ -112,6 +113,7 @@
 
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
+    <script src="app/modules/blocks/logger/logger.js"></script>
 
     <!-- end AngularJS app files -->
 </body>
