--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link href="app/assets/theme/admin/layout/css/layout.css" rel="stylesheet" type="text/css" />
     <link id="style_color" href="app/assets/theme/admin/layout/css/themes/default.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css" />
+	<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-utils/" />
     <link href="app/assets/theme/admin/layout/css/custom.css" rel="stylesheet" type="text/css" />
 
     <link href="app/css/main.css" rel="stylesheet">
@@ -69,8 +70,9 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-moment/angular-moment.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
+    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <!-- endbower -->
 
     <!-- i18n -->
@@ -105,6 +107,7 @@
     <script src="app/modules/menu/menu.js"></script>
 
     <script src="app/modules/home/config.js"></script>
+    <script src="app/modules/utils/config.js"></script>
     <script src="app/modules/widgets/config.js"></script>
     <script src="app/modules/promises/config.js"></script>
     <script src="app/modules/patterns/config.js"></script>
