--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -1,6 +1,7 @@
 <div id="sidebar">
     <ul class="sidebar-menu" ng-controller="MenuCtrl as vm">
         <li><a ui-sref="home" ng-class="vm.getPath('/home')"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
+	    <li><a ui-sref="utils" ng-class="vm.getPath('/utils')"><span class="glyphicon glyphicon-collapse-up"></span>  Utils</a></li>
         <li><a ui-sref="widgets" ng-class="vm.getPath('/widgets')"><span class="glyphicon glyphicon-dashboard"></span>  Widgets</a></li>
         <li><a ui-sref="promises" ng-class="vm.getPath('/promises')"><span class="glyphicon glyphicon-asterisk"></span>  Promises</a></li>
         <li><a ui-sref="patterns" ng-class="vm.getPath('/patterns')"><span class="glyphicon glyphicon-barcode"></span>  Patterns</a></li>
