Tooltip directive test.

--- a/app/modules/widgets/widgets.tpl.html
+++ b/app/modules/widgets/widgets.tpl.html
@@ -1,12 +1,16 @@
 <div class="page-container">
 
-    <h3 class="page-title">
-        Widgets
-    </h3>
+	<h3 class="page-title">
+		Widgets
+	</h3>
 
-    <!--<wi-calendar min="10"></wi-calendar>-->
+	<div class="well">
+		<label>
+			Field
+			<input type="text"/>
+		</label>
+		<component-tooltip message="This is tooltip message"></component-tooltip>
+	</div>
 
-    <wi-my-age></wi-my-age>
-
-
+	<!--<wi-my-age></wi-my-age>-->
 </div>
