--- a/app/modules/widgets/widgets.tpl.html
+++ b/app/modules/widgets/widgets.tpl.html
@@ -12,5 +12,6 @@
 		<component-tooltip message="This is tooltip message"></component-tooltip>
 	</div>
 
-	<!--<wi-my-age></wi-my-age>-->
+	<div ng-controller="Calendar as vm"
+	     ng-include="'app/modules/widgets/calendar/calendar.tpl.html'"></div>
 </div>
