--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link href="app/assets/theme/admin/layout/css/layout.css" rel="stylesheet" type="text/css" />
     <link id="style_color" href="app/assets/theme/admin/layout/css/themes/default.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css" />
-	<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-utils/" />
+	<!--<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-utils/" />-->
+	<link rel="stylesheet" href="bower_components/fullcalendar/fullcalendar.css"/>
     <link href="app/assets/theme/admin/layout/css/custom.css" rel="stylesheet" type="text/css" />
 
     <link href="app/css/main.css" rel="stylesheet">
@@ -65,6 +66,9 @@
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/angular-translate-loader-url/angular-translate-loader-url.js"></script>
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="bower_components/fullcalendar/fullcalendar.js"></script>
+    <script src="bower_components/fullcalendar/gcal.js"></script>
+    <script src="bower_components/angular-ui-calendar/src/calendar.js"></script>
     <script src="bower_components/respond/dest/respond.src.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/moment/moment.js"></script>
