--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/angular-dynforms/dynamic-forms.js"></script>
+    <script src="bower_components/tv4/tv4.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/objectpath/lib/ObjectPath.js"></script>
+    <script src="bower_components/angular-schema-form/dist/schema-form.js"></script>
+    <script src="bower_components/angular-schema-form/dist/bootstrap-decorator.js"></script>
     <!-- endbower -->
 
     <!-- i18n -->
@@ -123,7 +128,11 @@
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
     <script src="app/modules/blocks/logger/logger.js"></script>
-    <script src="app/modules/blocks/formJson/formJson.js"></script>
+
+    <!--compoenents-->
+    <script src="app/modules/components/components.module.js"></script>
+    <script src="app/modules/components/formJson/formJson.js"></script>
+    <script src="app/modules/components/portlet/portlet.js"></script>
 
     <!-- end AngularJS app files -->
 </body>
