--- a/app/modules/forms/forms.tpl.html
+++ b/app/modules/forms/forms.tpl.html
@@ -7,25 +7,29 @@
 
 
     <component-portlet
+            name="form1"
+            header="Primary"
             class-name="panel-primary"
             footer-text="Portlet"
-            schema="app/modules/forms/schemaform/schema.json"
-            form-definition="app/modules/forms/schemaform/formDefinition.json">
+            schema="app/modules/forms/schemaform/form1/schema.json"
+            form-definition="app/modules/forms/schemaform/form1/formDefinition.json">
+        <form ng-if="vm.formSettings"
+              sf-schema="vm.formSettings.form1.schema"
+              sf-form="vm.formSettings.form1.formDefinition"
+              sf-model="vm.model1"></form>
+    </component-portlet>
 
-        <form ng-if="vm.formSettings" sf-schema="vm.formSettings.schema" sf-form="vm.formSettings.formDefinition" sf-model="vm.model"></form>
-
-
-        <!--Angular dynamic form-->
-        <!--<div id="angular-dynamic-form-example">-->
-        <!--<form-template-data url="app/modules/forms/form.data.json"></form-template-data>-->
-
-        <!--<dynamic-form template="vm.formTemplate"-->
-        <!--ng-model="vm.formData"-->
-        <!--ng-submit="vm.processForm()"-->
-        <!--ng-if="vm.formTemplate">-->
-        <!--</dynamic-form>-->
-        <!--</div>-->
-
+    <component-portlet
+            name="form2"
+            header="Success"
+            class-name="panel-success"
+            footer-text="Portlet"
+            schema="app/modules/forms/schemaform/form2/schema.json"
+            form-definition="app/modules/forms/schemaform/form2/formDefinition.json">
+        <form ng-if="vm.formSettings"
+              sf-schema="vm.formSettings.form2.schema"
+              sf-form="vm.formSettings.form2.formDefinition"
+              sf-model="vm.model2"></form>
     </component-portlet>
 
 
