--- a/app/modules/widgets/widgets.tpl.html
+++ b/app/modules/widgets/widgets.tpl.html
@@ -14,4 +14,6 @@
 
 	<div ng-controller="Calendar as vm"
 	     ng-include="'app/modules/widgets/calendar/calendar.tpl.html'"></div>
+
+	<wi-my-age></wi-my-age>
 </div>
