--- a/app/modules/forms/forms.tpl.html
+++ b/app/modules/forms/forms.tpl.html
@@ -8,11 +8,11 @@
 
     <div class="row">
         <div class="col-md-6">
-            <div ng-include="'app/modules/forms/schemaform/form1/form1.tpl.html'"></div>
+            <div class="animated zoomInDown" ng-include="'app/modules/forms/schemaform/form1/form1.tpl.html'"></div>
         </div>
 
         <div class="col-md-6">
-            <div ng-include="'app/modules/forms/schemaform/form2/form2.tpl.html'"></div>
+            <div class="animated zoomInDown" ng-include="'app/modules/forms/schemaform/form2/form2.tpl.html'"></div>
         </div>
     </div>
 
