--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<!--<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-utils/" />-->
 	<link rel="stylesheet" href="bower_components/fullcalendar/fullcalendar.css"/>
     <link href="app/assets/theme/admin/layout/css/custom.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="app/css/animate/animate.css" />
 
     <link href="app/css/main.css" rel="stylesheet">
     <link href="app/css/button.css" rel="stylesheet">
