--- a/app/modules/forms/forms.tpl.html
+++ b/app/modules/forms/forms.tpl.html
@@ -5,27 +5,6 @@
 		</h3>
 	</hgroup>
 	<div class="row">
-		<h2>Table list items</h2>
-
-		<div>
-			<table class="table table-condensed table-bordered">
-				<tr ng-repeat="item in vm.tableList">
-					<td><input type="text" ng-model="item.text"/></td>
-					<td><span class="glyphicon glyphicon-remove" ng-click="vm.remove($index)"></span></td>
-				</tr>
-			</table>
-
-			<form>
-				<input type="text" ng-model="vm.text" size="30"
-				       placeholder="add new item">
-				<button class="btn-primary" ng-click="vm.addWithValue()">Add new input with value</button>
-				<button class="btn-primary" ng-click="vm.addEmpty()">Add new input without value</button>
-			</form>
-		</div>
-	</div>
-	<hr/>
-
-	<div class="row">
 		<div class="col-md-6">
 			<div class="animated zoomInDown" ng-include="'app/modules/forms/schemaform/form1/form1.tpl.html'"></div>
 		</div>
@@ -34,5 +13,39 @@
 			<div class="animated zoomInDown" ng-include="'app/modules/forms/schemaform/form2/form2.tpl.html'"></div>
 		</div>
 	</div>
+	<hr/>
 
+	<div class="row">
+		<div class="col-md-12">
+			<component-portlet
+					basic-mode="true"
+					name="basic-form-list"
+					header="Table list of items"
+					class-name="panel-primary">
+				<table class="table table-condensed table-bordered">
+					<thead>
+					<tr>
+						<th>Input</th>
+						<th>Actions</th>
+					</tr>
+					</thead>
+					<tbody>
+					<tr ng-repeat="item in vm.tableList">
+						<td><input class="form-control" type="text" ng-model="item.text"
+						           ng-model-options="vm.tableListModelOptions"/></td>
+						<td><span class="glyphicon glyphicon-remove" ng-click="vm.remove($index)"></span></td>
+					</tr>
+					</tbody>
+				</table>
+
+				<form>
+					<input type="text" ng-model="vm.text" size="30"
+					       placeholder="add new item">
+					<button class="btn-primary" ng-click="vm.addWithValue()">Add new input with value</button>
+					<button class="btn-primary" ng-click="vm.addEmpty()">Add new input without value</button>
+				</form>
+			</component-portlet>
+			<pre>{{vm.tableList|json}}</pre>
+		</div>
+	</div>
 </div>
