Simple scopes operations with modal and collection.

--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -1,6 +1,7 @@
 <div id="sidebar">
     <ul class="sidebar-menu" ng-controller="MenuCtrl as vm">
         <li><a ui-sref="home" ng-class="vm.getPath('/home')"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
+        <li><a ui-sref="scopes" ng-class="vm.getPath('/scopes')"><span class="glyphicon glyphicon-bell"></span>  Scopes</a></li>
         <li><a ui-sref="forms" ng-class="vm.getPath('/forms')"><span class="glyphicon glyphicon-fire"></span>  Forms</a></li>
 	    <li><a ui-sref="utils" ng-class="vm.getPath('/utils')"><span class="glyphicon glyphicon-collapse-up"></span>  Utils</a></li>
         <li><a ui-sref="widgets" ng-class="vm.getPath('/widgets')"><span class="glyphicon glyphicon-dashboard"></span>  Widgets</a></li>
