--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <script src="bower_components/objectpath/lib/ObjectPath.js"></script>
     <script src="bower_components/angular-schema-form/dist/schema-form.js"></script>
     <script src="bower_components/angular-schema-form/dist/bootstrap-decorator.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="bower_components/angular-lodash/angular-lodash.js"></script>
     <!-- endbower -->
 
     <!-- i18n -->
@@ -124,6 +126,7 @@
     <script src="app/modules/interpolation/config.js"></script>
     <script src="app/modules/seatReservation/config.js"></script>
     <script src="app/modules/forms/config.js"></script>
+    <script src="app/modules/scopes/config.js"></script>
 
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
