--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div id="main">
         <div id="header">
             <span class="logo"><span class="glyphicon glyphicon-road"></span> BajsAPP</span>
+            <count-watchers></count-watchers>
         </div>
 
         <div ng-include="'app/tpl/sidebar.tpl.html'"></div>
@@ -132,10 +133,13 @@
     <script src="app/modules/core/common.js"></script>
     <script src="app/modules/blocks/logger/logger.js"></script>
 
-    <!--compoenents-->
+    <!--components-->
     <script src="app/modules/components/components.module.js"></script>
     <script src="app/modules/components/formJson/formJson.js"></script>
     <script src="app/modules/components/portlet/portlet.js"></script>
+
+    <!--tools-->
+    <script src="app/modules/tools/tools.js"></script>
 
     <!-- end AngularJS app files -->
 </body>
