--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <script src="app/modules/interpolation/config.js"></script>
     <script src="app/modules/seatReservation/config.js"></script>
     <script src="app/modules/forms/config.js"></script>
-    <!--<script src="app/modules/scopes/config.js"></script>-->
+    <script src="app/modules/scopes/config.js"></script>
 
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
