Directives communication (require).

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <script src="app/modules/seatReservation/config.js"></script>
     <script src="app/modules/forms/config.js"></script>
     <script src="app/modules/scopes/config.js"></script>
+    <script src="app/modules/dirCommunication/config.js"></script>
 
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
