--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script src="bower_components/angular-schema-form/dist/bootstrap-decorator.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/angular-lodash/angular-lodash.js"></script>
+    <script src="bower_components/rxjs/dist/rx.all.js"></script>
     <!-- endbower -->
 
     <!-- i18n -->
@@ -126,6 +127,7 @@
     <script src="app/modules/forms/config.js"></script>
     <script src="app/modules/scopes/config.js"></script>
     <script src="app/modules/dirCommunication/config.js"></script>
+    <script src="app/modules/reactive/config.js"></script>
 
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
