--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <script src="bower_components/angular-schema-form/dist/bootstrap-decorator.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/angular-lodash/angular-lodash.js"></script>
-    <script src="bower_components/rxjs/dist/rx.all.js"></script>
+    <script src="bower_components/rx-angular/dist/rx.angular.js"></script>
     <!-- endbower -->
 
     <!-- i18n -->
