Architectural patterns module.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <script src="app/modules/utils/config.js"></script>
     <script src="app/modules/widgets/config.js"></script>
     <script src="app/modules/promises/config.js"></script>
+    <script src="app/modules/architecturalPatterns/config.js"></script>
     <script src="app/modules/patterns/config.js"></script>
     <script src="app/modules/animations/config.js"></script>
     <script src="app/modules/interpolation/config.js"></script>
