--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -8,6 +8,7 @@
         <li><a ui-sref="widgets" ng-class="vm.getPath('/widgets')"><span class="glyphicon glyphicon-dashboard"></span>  Widgets</a></li>
         <li><a ui-sref="reactive" ng-class="vm.getPath('/reactive')"><span class="glyphicon glyphicon-tree-conifer"></span>  Reactive Extensions</a></li>
         <li><a ui-sref="promises" ng-class="vm.getPath('/promises')"><span class="glyphicon glyphicon-asterisk"></span>  Promises</a></li>
+        <li><a ui-sref="architecturalPatterns" ng-class="vm.getPath('/architecturalPatterns')"><span class="glyphicon glyphicon-bold"></span>  Architectural Patterns</a></li>
         <li><a ui-sref="patterns" ng-class="vm.getPath('/patterns')"><span class="glyphicon glyphicon-barcode"></span>  Patterns</a></li>
 	    <li><a ui-sref="animations" ng-class="vm.getPath('/animations')"><span class="glyphicon glyphicon-briefcase"></span>  Animations</a></li>
 	    <li><a ui-sref="interpolation" ng-class="vm.getPath('/interpolation')"><span class="glyphicon glyphicon-backward"></span>  Interpolation</a></li>
