--- a/app/modules/lazyLoad/lazyLoad.tpl.html
+++ b/app/modules/lazyLoad/lazyLoad.tpl.html
@@ -1,7 +1,7 @@
 <div class="page-container">
     <hgroup>
         <h3 class="page-title">
-            Reactive Extensions
+            Lazy Load
         </h3>
     </hgroup>
 
