--- a/app/tpl/sidebar.tpl.html
+++ b/app/tpl/sidebar.tpl.html
@@ -6,7 +6,7 @@
         <li><a ui-sref="forms" ng-class="vm.getPath('/forms')"><span class="glyphicon glyphicon-fire"></span>  Forms</a></li>
 	    <li><a ui-sref="utils" ng-class="vm.getPath('/utils')"><span class="glyphicon glyphicon-collapse-up"></span>  Utils</a></li>
         <li><a ui-sref="widgets" ng-class="vm.getPath('/widgets')"><span class="glyphicon glyphicon-dashboard"></span>  Widgets</a></li>
-        <li><a ui-sref="reactive" ng-class="vm.getPath('/reactive')"><span class="glyphicon glyphicon-tree-conifer"></span>  Reactive Extensions</a></li>
+        <li><a ui-sref="lazyLoad" ng-class="vm.getPath('/lazyLoad')"><span class="glyphicon glyphicon-tree-conifer"></span>  Lazy Load</a></li>
         <li><a ui-sref="promises" ng-class="vm.getPath('/promises')"><span class="glyphicon glyphicon-asterisk"></span>  Promises</a></li>
         <li><a ui-sref="architecturalPatterns" ng-class="vm.getPath('/architecturalPatterns')"><span class="glyphicon glyphicon-bold"></span>  Architectural Patterns</a></li>
         <li><a ui-sref="patterns" ng-class="vm.getPath('/patterns')"><span class="glyphicon glyphicon-barcode"></span>  Patterns</a></li>
