--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="app/assets/theme/ico/favicon.ico">
 
-    <title>Bajsapp</title>
+    <title>AngularJS Features</title>
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
     <link href="app/assets/theme/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -38,7 +38,7 @@
 <body>
     <div id="main">
         <div id="header">
-            <span class="logo"><span class="glyphicon glyphicon-road"></span> BajsAPP</span>
+            <span class="logo"><span class="glyphicon glyphicon-road"></span> AngularJS Features</span>
             <count-watchers></count-watchers>
         </div>
 
@@ -82,7 +82,7 @@
     <script src="bower_components/angular-schema-form/dist/bootstrap-decorator.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/angular-lodash/angular-lodash.js"></script>
-    <script src="bower_components/rx-angular/dist/rx.angular.js"></script>
+    <!--<script src="bower_components/rx-angular/dist/rx.angular.js"></script>-->
     <!-- endbower -->
 
     <!-- i18n -->
@@ -128,7 +128,7 @@
     <script src="app/modules/forms/config.js"></script>
     <script src="app/modules/scopes/config.js"></script>
     <script src="app/modules/dirCommunication/config.js"></script>
-    <script src="app/modules/reactive/config.js"></script>
+    <script src="app/modules/lazyLoad/config.js"></script>
 
     <script src="app/modules/core/core.module.js"></script>
     <script src="app/modules/core/common.js"></script>
