--- a/app/modules/lazyLoad/lazyLoad.tpl.html
+++ b/app/modules/lazyLoad/lazyLoad.tpl.html
@@ -3,6 +3,8 @@
         <h3 class="page-title">
             Lazy Load
         </h3>
+
+        <lazy-load-component data="vm.data"></lazy-load-component>
     </hgroup>
 
 </div>
